Fix: Fixed navbar not showing up on mobile devices
Apparently, the backdrop-filter property (& several others like filter)
applied to an element contain every child of that element within the parent regardless of their position.
Thus, if any child element has any position type (absolute, fixed etc) will be positioned relatively to the parent with backdrop filter property
instead of being positioned relatively to the viewport (fixed position elements position themselves relative to the viewport)

This bug has been somewhat fixed by using pseudo element. However, a visual bug still remains. You can see the effect flickering
when the navbar 'unhides' itself on scroll.

Not sure how to fix that yet. But hey, usability is more important than visuals :P

I will figure out something. Perhaps, some extra markup might solve the issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,13 +231,23 @@ a {
   overflow: hidden;
 }
 
+.nav-header::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
+
 @supports (backdrop-filter: blur(1px)) {
-  .nav-header {
+  .nav-header::before {
     backdrop-filter: blur(6px);
   }
 }
 
 .navbar {
+  z-index: 10;
   position: relative;
   justify-content: space-between;
   margin: 0 clamp(25px, 7.55vw, 50px);
